added a contact form and revised educ history and technical skills

--- a/index.html
+++ b/index.html
@@ -13,40 +13,33 @@
     <p>Email Address: eesperida@gbox.adnu.edu.ph</p>
 <hr>
 <h4><b>Short Personal Statement</b></h4>
-    <p>"Expect nothing and you will never be disappointed"</p>
+    <p><i>"Expect nothing and you will never be disappointed"</i></p>
 <hr>
 <table>
     <h4>Educational History</h4>
-    <thead>
+    <tbody>
         <tr>
-            <th>Primary Education: <td>Ladislao Diwa Elementary School</td></th>
+            <th>2021-PRESENT<td>Ateneo de Naga University</td></th>
         </tr>
         <tr>
-            <td>2008-2014</td>
+            <th>2014-2020 <td>Camarines Sur National High School</td></th>
         </tr>
         <tr>
-            <th>Secondary Education: <td>Camarines Sur National High School</td></th>
+            <th>2008-2014 <td>Ladislao Diwa Elementary School</td></th>
         </tr>
-        <tr>
-            <td>2014-2020</td>
-        </tr>
-        <tr>
-            <th>Tertiary Education: <td>Ateneo de Naga University</td></th>
-        </tr>
-        <tr>
-            <td>2021-PRESENT</td>
-        </tr>
-    </thead>
+    </tbody>
 </table>
 <hr>
 <h4><b>General and Technical Skills</b></h4>
 <ul>
     <li><b>Programming</b></li>
-        <ul>C++</ul>
-        <ul>Java</ul>
-        <ul>PHP</ul>
-        <ul>HTML</ul>
-        <ul>CSS</ul>
+        <ul>
+            <li>C++</li>
+            <li>Java++</li>
+            <li>PHP</li>
+            <li>HTML</li>
+            <li>CSS</li>
+        </ul>
     <li>Encoding</li>
     <li>Design</li>
 </ul>
@@ -65,5 +58,8 @@
         <li>Job Order</li>
     </ul>
 </ol>
+<hr>
+<h4><b>Send email here</b></h4>
+<a href="viewform.html">Send email</a>
 </body>
 </html>
