--- a/viewform.html
+++ b/viewform.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Contact</title>
-    <a href="index.html">←BACK</a>    
-    </head>
-    <body>
-        <h1>Drop a message</h1>
+
+<head>
+    <title>Form Activity</title>
+
+</head>
+
+<body>
+        <h1>Registration Form</h1>
         <form>
-            Name: <input type="text" placeholder= "Enter name" name="name"/>
-        <br/>
-            Email: <input type="email" placeholder= "Enter Email Address" name="email address" />
-        <br/>
-            <textarea name="Your message" placeholder= "Your message here....." cols="25" rows="10"></textarea>
-        <br/>
-        <input type="submit" name="submit" value="Submit"/>
-        <input type="reset" name="reset" value="Reset"/>
-        <br/>
+            First Name: <br><input class="wrap" type="text" name="firstname"/></br>
+            Last Name: <br><input class="wrap" type="text" name="lastname" /></br>
+            Nick Name: <br><input class="wrap" type="text" name="nickname" /></br>
+            Email: <br><input class="wrap" type="email" name="email" /></br>
+            Password <br><input class="wrap" type="password" name="password" /></br>
+            Date of Birth: <br><input class="wrap" type="date" name="bday"/></br>
+            Gender: <br><input type="radio" name="male" value="male" />
+            <label for="male">Male</label>
+            <input type="radio" name="female" value="female" />
+            <label for="fale">Female</label>
+            <input type="radio" name="other" value="other" />
+            <label for="other">Other</label><br /> Mobile: <br><input class="wrap" type="tel" name="mobile"/></br>
+            Address: <br><textarea class="wrap" name="address" cols="25" rows="10"></textarea></br>
+            <input type="submit" name="submit" value="Submit" />
+            <input type="reset" name="reset" value="Reset" />
         </form>
-        <a href="https://www.facebook.com/clancyisdead/" target="_blank">Facebook</a>
-        <a href="https://github.com/DominicAEsperida" target="_blank">GitHub</a>
-    </body>
+</body>
 </html>
